# amrl_consensus

./: .gitignore  CMakeLists.txt  LICENSE  package.xml
config/: project_params.yaml
config/formations/: line.json  square.json
config/plans/: circle_line.json
libs/: CMakeLists.txt
libs/consensus/: CMakeLists.txt  FormationConsensus.hpp
libs/consensus/src/: FormationConsensus.cpp
libs/display/: CMakeLists.txt  DisplayFormation.hpp
libs/display/src/: DisplayFormation.cpp
libs/formation/: CMakeLists.txt  Formation.hpp  FormationCircle.hpp  FormationFromFile.hpp  FormationMovement.hpp  FormationSupervisor.hpp  RobotFormation.hpp
libs/formation/src/: Formation.cpp  FormationCircle.cpp  FormationFromFile.cpp  FormationMovement.cpp  FormationSupervisor.cpp  RobotFormation.cpp
libs/interface/: CMakeLists.txt  RobotInterface.hpp
libs/interface/src/: RobotInterface.cpp
libs/logging/: CMakeLists.txt  ConsensusLogging.hpp
libs/logging/src/: ConsensusLogging.cpp
libs/runge_kutta/: CMakeLists.txt  RungeKutta.hpp
libs/runge_kutta/src/: RungeKutta.cpp
libs/sim/: CMakeLists.txt  Plant.hpp  SimulationRobot.hpp
libs/sim/src/: SimulationRobot.cpp
nodes/: CMakeLists.txt  ConsensusNode.hpp  consensus_node.cpp
nodes/consensus/: CMakeLists.txt  ConsensusNode.hpp  consensus_node.cpp
nodes/consensus/src/: ConsensusNode.cpp
nodes/simulation/: CMakeLists.txt  SimulationNode.hpp  simulation_node.cpp
nodes/simulation/src/: SimulationNode.cpp
nodes/src/: ConsensusNode.cpp
py_plotting/: pose_plots.py  util_functions.py
ros_launch/: consensus.launch
